frontend/src/components/SharedLayout/MobileNavigation/MobileNavigation.module.css
.container {
  padding: 18px 16px;
  position: fixed;
  display: grid;
  width: 100%;
  height: 100vh;
  top: -100%;
  right: 0;
  background-color: var(--mobile-nav-bg);
  grid-template-areas:
    "logo  ... close"
    "....  nav ...."
    "theme ... ....";
  z-index: 1000;

  transition: transform 700ms cubic-bezier(0.4, 0, 0.2, 1);
}
@media screen and (min-width: 768px) {
  .container {
    padding: 18px 32px;
  }
}
@media screen and (min-width: 1440px) {
  .container {
    display: none;
  }
}
.logo {
  align-self: center;
  grid-area: logo;
  width: 40px;
  height: 40px;
}
@media screen and (min-width: 768px) and (max-width: 1439px) {
  .logo {
    width: 44px;
    height: 44px;
  }
}
.modal {
  grid-area: nav;
}
.close {
  justify-self: flex-end;
  grid-area: close;
  cursor: pointer;
  padding: 0;
  background-color: transparent;
  border: 0;
  width: 32px;
  height: 32px;
}
.close:hover .close-icon,
.close:focus .close-icon {
  stroke: var(--accent-color-darker);
}
.close-icon {
  stroke: var(--main-color-dark);
  width: 100%;
  height: 100%;

  transition: stroke 150ms;
}

.switch {
  grid-area: theme;
  align-self: flex-end;
}

.mobile-open {
  transform: translateY(100%);
}
.mobile-close {
  transform: translateY(0);
}

